5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1637_2443.log
== TEST (2019-04-15 22:26:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
r = float(input("Raio: "))
x = float(input("Altura"))
opcao = int(input("numero 1 ou 2: "))
esfera = ( 4* pi * r**3)/3
calota = ( pi * x**2 *(3 * r - x))/3
comb = esfera - calota
ar = calota
print(round(ar, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:27:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
r = float(input("Raio: "))
x = float(input("Altura"))
opcao = int(input("numero 1 ou 2: "))
esfera = ( 4* pi * r**3)/3
calota = ( pi * x**2 *(3 * r - x))/3
comb = esfera - calota
ar = calota
print(round(ar, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:27:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
r = float(input("Raio: "))
x = float(input("Altura"))
opcao = int(input("numero 1 ou 2: "))
esfera = ( 4* pi * r**3)/3
calota = ( pi * x**2 *(3 * r - x))/3
comb = esfera - calota
ar = calota
print(round(ar, 4))
-- EXECUTION TIME:
0.158566
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
19.9983
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:28:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
r = float(input("Raio: "))
x = float(input("Altura"))
opcao = int(input("numero 1 ou 2: "))
esfera = ( 4* pi * r**3)/3
calota = ( pi * x**2 *(3 * r - x))/3
comb = esfera - calota
ar = calota
if(opcao==1)
print(round(ar, 4))
-- EXECUTION TIME:
0.145454
-- ERROR:
  File "/home/codebench/codes/1637/2443/main.py", line 12
    if(opcao==1)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:30:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
r = float(input("Raio: "))
x = float(input("Altura"))
opcao = int(input("numero 1 ou 2: "))
esfera = ( 4* pi * r**3)/3
calota = ( pi * x**2 *(3 * r - x))/3
comb = esfera - calota
ar = calota
if(opcao==1):
	print(round(ar, 4))
else
	print(round(comb, 4))
-- EXECUTION TIME:
0.177962
-- ERROR:
  File "/home/codebench/codes/1637/2443/main.py", line 14
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:30:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
r = float(input("Raio: "))
x = float(input("Altura"))
opcao = int(input("numero 1 ou 2: "))
esfera = ( 4* pi * r**3)/3
calota = ( pi * x**2 *(3 * r - x))/3
comb = esfera - calota
ar = calota
if(opcao==1):
	print(round(ar, 4))
else
	print(round(comb, 4))
-- EXECUTION TIME:
0.213847
-- ERROR:
  File "/home/codebench/codes/1637/2443/main.py", line 14
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:30:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
r = float(input("Raio: "))
x = float(input("Altura"))
opcao = int(input("numero 1 ou 2: "))
esfera = ( 4* pi * r**3)/3
calota = ( pi * x**2 *(3 * r - x))/3
comb = esfera - calota
ar = calota
if(opcao==1):
	print(round(ar, 4))
else
	print(round(comb, 4))
-- EXECUTION TIME:
0.219251
-- ERROR:
  File "/home/codebench/codes/1637/2443/main.py", line 14
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:31:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
r = float(input("Raio: "))
x = float(input("Altura"))
opcao = int(input("numero 1 ou 2: "))
esfera = ( 4* pi * r**3)/3
calota = ( pi * x**2 *(3 * r - x))/3
comb = esfera - calota
ar = calota
if(opcao==1):
	print(round(ar, 4))
else:
	print(round(comb, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:31:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
r = float(input("Raio: "))
x = float(input("Altura"))
opcao = int(input("numero 1 ou 2: "))
esfera = ( 4* pi * r**3)/3
calota = ( pi * x**2 *(3 * r - x))/3
comb = esfera - calota
ar = calota
if(opcao==1):
	print(round(ar, 4))
else:
	print(round(comb, 4))
-- EXECUTION TIME:
0.14333
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:31:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
r = float(input("Raio: "))
x = float(input("Altura"))
opcao = int(input("numero 1 ou 2: "))
esfera = ( 4* pi * r**3)/3
calota = ( pi * x**2 *(3 * r - x))/3
comb = esfera - calota
ar = calota
if(opcao==1):
	print(round(ar, 4))
else:
	print(round(comb, 4))
-- EXECUTION TIME:
0.246234
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
